--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,5 +1,10 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
+    <ion-buttons slot="end">
+      <ion-menu-button>
+        <ion-icon name="apps-outline"></ion-icon>
+      </ion-menu-button>
+    </ion-buttons>
     <ion-title>
       Registro
     </ion-title>
