--- a/src/app/pagina1/pagina1.page.html
+++ b/src/app/pagina1/pagina1.page.html
@@ -1,11 +1,16 @@
 <ion-header>
   <ion-toolbar>
+    <ion-buttons slot="end">
+      <ion-menu-button>
+        <ion-icon name="apps-outline"></ion-icon>
+      </ion-menu-button>
+    </ion-buttons>
     <ion-title>pagina1</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
   <ion-item>
-    <ion-label>{{nombre}}</ion-label>
+    <ion-label>pagina1</ion-label>
   </ion-item>
 </ion-content>
