--- a/src/app/page2/page2.page.html
+++ b/src/app/page2/page2.page.html
@@ -1,5 +1,8 @@
 <ion-header>
   <ion-toolbar>
+    <ion-buttons>
+      <ion-back-button defaultHref="home"></ion-back-button>
+    </ion-buttons>
     <ion-title>page2</ion-title>
   </ion-toolbar>
 </ion-header>
